--- a/index.html
+++ b/index.html
@@ -345,10 +345,60 @@
 
         })
 
+        const prefectures = {
+            '01': '北海道',
+            '02': '青森県',
+            '03': '岩手県',
+            '04': '宮城県',
+            '05': '秋田県',
+            '06': '山形県',
+            '07': '福島県',
+            '08': '茨城県',
+            '09': '栃木県',
+            '10': '群馬県',
+            '11': '埼玉県',
+            '12': '千葉県',
+            '13': '東京都',
+            '14': '神奈川県',
+            '15': '新潟県',
+            '16': '富山県',
+            '17': '石川県',
+            '18': '福井県',
+            '19': '山梨県',
+            '20': '長野県',
+            '21': '岐阜県',
+            '22': '静岡県',
+            '23': '愛知県',
+            '24': '三重県',
+            '25': '滋賀県',
+            '26': '京都府',
+            '27': '大阪府',
+            '28': '兵庫県',
+            '29': '奈良県',
+            '30': '和歌山県',
+            '31': '鳥取県',
+            '32': '島根県',
+            '33': '岡山県',
+            '34': '広島県',
+            '35': '山口県',
+            '36': '徳島県',
+            '37': '香川県',
+            '38': '愛媛県',
+            '39': '高知県',
+            '40': '福岡県',
+            '41': '佐賀県',
+            '42': '長崎県',
+            '43': '熊本県',
+            '44': '大分県',
+            '45': '宮崎県',
+            '46': '鹿児島県',
+            '47': '沖縄県'
+        };
+
         // 歴史的地名ポップアップ表示
         map.on('click', 'rekichime-symbol', (e) => {
-            var lng = e.features[0].geometry.coordinates[0];
-            var lat = e.features[0].geometry.coordinates[1];
+            var lng = e.features[0].properties['経度'];
+            var lat = e.features[0].properties['緯度'];
             var id = e.features[0].properties['id'];
             var pref_code = e.features[0].properties['都道府県コード'];
             var name = e.features[0].properties['名称'];
@@ -360,6 +410,9 @@
             var rekichime = e.features[0].properties['歴史地名'];
             var geolod_id = e.features[0].properties['geolod_id'];
 
+            // 都道府県コードから都道府県の名称を取得
+            var pref_name = prefectures[pref_code] || '不明';
+
             if (rekichime_id === undefined) { rekichime_id = "" };
             if (rekichime === undefined) { rekichime = "" };
             if (geolod_id === undefined) { geolod_id = "" };
@@ -367,16 +420,17 @@
             new maplibregl.Popup()
                 .setLngLat(e.lngLat)
                 .setHTML(
-                    '<div style="border-bottom:1px solid #000;"><strong>名称: ' + name + '</strong></div>' +
+                    '<div style="border-bottom:1px solid #000;"><strong>名称: <span style="color: #007FFF; font-size: 1.2em;">' + name + '</span></strong></div>' +
                     '<div style="border-bottom:1px solid #000;">読み: ' + yomi + '</div>' +
                     '<div style="border-bottom:1px solid #000;">id: ' + id + '</div>' +
-                    '<div style="border-bottom:1px solid #000;">都道府県コード: ' + pref_code + '</div>' +
+                    '<div style="border-bottom:1px solid #000;">都道府県: ' + pref_name + '</div>' +
                     '<div style="border-bottom:1px solid #000;">上位地名: ' + jouichimei + '</div>' +
                     '<div style="border-bottom:1px solid #000;">出典住所: ' + address + '</div>' +
                     '<div style="border-bottom:1px solid #000;">推定手法: ' + suiteisyuhou + '</div>' +
                     '<div style="border-bottom:1px solid #000;">歴史地名ID: ' + rekichime_id + '</div>' +
                     '<div style="border-bottom:1px solid #000;">歴史地名: ' + rekichime + '</div>' +
                     '<div style="border-bottom:1px solid #000;">geolod_id: ' + geolod_id + '</div>' +
+                    '<div style="border-bottom:1px solid #000;">緯度経度: ' + lat + ',' + lng + '</div>' +
                     '<div><a href="https://www.google.com/maps?q=' + lat + ',' + lng + '&hl=ja" target="_blank">🌎Google Maps</a></div>' +
                     '<div><a href="https://www.google.com/maps/@?api=1&map_action=pano&viewpoint=' + lat + ',' + lng + '&hl=ja" target="_blank">📷Street View</a></div>'
                 )
