--- a/index.html
+++ b/index.html
@@ -53,6 +53,37 @@
             margin: 0;
             cursor: ew-resize;
         }
+
+        .legend {
+            background-color: #fff;
+            border-radius: 3px;
+            bottom: 60px;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
+            font: 12px/14px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+            padding: 10px;
+            position: absolute;
+            right: 10px;
+            z-index: 1;
+            line-height: 10px;
+            height: auto;
+        }
+
+        .legend h4 {
+            margin: 0 0 10px;
+        }
+
+        .legend div span {
+            border-radius: 50%;
+            display: inline-block;
+            height: 15px;
+            margin-right: 10px;
+            width: 15px;
+            color: orangered
+        }
+
+        .historic-place {
+            color: #009800;
+        }
     </style>
 </head>
 
@@ -63,6 +94,11 @@
             <label>陰影起伏図 不透明度: <span id="inei-slider-opacity-value">50%</span></label>
             <input id="inei-slider-opacity" type="range" min="0" max="100" step="1" value="50">
         </div>
+    </div>
+    <div id='legend' class='legend'>
+        <h4>凡例</h4>
+        <img src="./img/grn-circle.png" alt="歴史的地名" style="width:20px; height:20px;" />
+        <span class="historic-place">歴史的地名</span>
     </div>
     <script type="text/javascript">
         // protocolの設定
